<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="okey_15">OKey (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amaging_20">Amaging (20%)</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">tip amount %s</string>
    <string name="round_up_the_tip">Round up the tip</string>
</resources>